# derivational-probing

./: .gitignore  README.md  pyproject.toml
config/cumulative_bertbase/: 0.yaml  1.yaml  10.yaml  11.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  test.yaml
config/cumulative_bertlarge/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  test.yaml
config/cumulative_gpt2medium/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  test.yaml
config/cumulative_gpt2small/: 0.yaml  1.yaml  10.yaml  11.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  (+1 more)
experiments/: 0_preprocess_data.sh  1_filter_data.sh  1_preprocess_data.sh  2_convert_conll_to_raw.sh  3_convert_raw_to_embeddings.sh  5_aggregate_results.sh
notebooks/: plots.ipynb
scripts/: aggregate_results.py  convert_conll_to_raw.py  convert_raw_to_bert.py  convert_raw_to_gpt2.py  filter_by_tse_result_bert_whole_prob.py  filter_by_tse_result_gpt_whole_prob.py  filter_data.py  marvin_to_conllx.py  output_tse_result_bert_whole_prob.py  output_tse_result_gpt_whole_prob.py  parse_wikitext_103.py  post_edit_wiki_conll.py
structural_probes/: __init__.py  data.py  filter_data.py  loss.py  model.py  probe.py  regimen.py  reporter.py  run_demo.py  run_experiment.py  task.py
(+82 files in other folders)
