[project]
name = "derivational-probing"
version = "0.1.0"
description = "Derivational Probing: Unveiling the Layer-wise Construction of Syntactic Structures in Neural Language Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
